syntax = "proto3";

package session;

option go_package = "github.com/havoc-io/mutagen/pkg/session";

import "filesystem/watch.proto";
import "sync/ignore.proto";
import "sync/mode.proto";
import "sync/permissions.proto";
import "sync/symlink.proto";

// Configuration encodes session configuration parameters. It is used for create
// commands to specify configuration options, for loading global configuration
// options, and for storing a merged configuration inside sessions.
message Configuration {
    // Synchronization parameters (fields 11-20).
    // NOTE: These run from field indices 11-20 (rather than 1-10, which are
    // reserved for symlink configuration parameters) due to the historical
    // order in which these fields were added.

    // SynchronizationMode specifies the synchronization mode that should be
    // used in synchronization.
    sync.SynchronizationMode synchronizationMode = 11;

    // Fields 12-20 are reserved for future synchronization configuration
    // parameters.


    // Symlink configuration parameters (fields 1-10).
    // NOTE: These run from field indices 1-10. The reason for this is that
    // symlink configuration parameters is due to the historical order in which
    // configuration fields were added.

    // SymlinkMode specifies the symlink mode that should be used in
    // synchronization.
    sync.SymlinkMode symlinkMode = 1;

    // Fields 2-10 are reserved for future symlink configuration parameters.


    // Watch configuration parameters (fields 21-30).

    // WatchMode specifies the filesystem watching mode.
    filesystem.WatchMode watchMode = 21;

    // WatchPollingInterval specifies the interval (in seconds) for poll-based
    // file monitoring. A value of 0 specifies that the default interval should
    // be used.
    uint32 watchPollingInterval = 22;

    // Fields 23-30 are reserved for future watch configuration parameters.


    // Ignore configuration parameters (fields 31-60).

    // DefaultIgnores specifies the ignore patterns brought in from the global
    // configuration.
    repeated string defaultIgnores = 31;

    // Ignores specifies the ignore patterns brought in from the create request.
    repeated string ignores = 32;

    // IgnoreVCSMode specifies the VCS ignore mode that should be used in
    // synchronization.
    sync.IgnoreVCSMode ignoreVCSMode = 33;

    // Fields 34-60 are reserved for future ignore configuration parameters.


    // Permission configuration parameters (fields 61-80).

    // Field 61 is reserved for PermissionMode.

    // PermissionExposureLevel specifies the default exposure level for
    // permissions in "portable" permission propagation mode, with
    // endpoint-specific specifications taking priority.
    sync.PermissionExposureLevel permissionExposureLevel = 62;

    // AlphaPermissionExposureLevel specifies the default exposure level for
    // permissions on alpha in "portable permission mode", taking priority over
    // PermissionExposureLevel if specified.
    sync.PermissionExposureLevel alphaPermissionExposureLevel = 63;

    // BetaPermissionExposureLevel specifies the default exposure level for
    // permissions on beta in "portable permission mode", taking priority over
    // PermissionExposureLevel if specified.
    sync.PermissionExposureLevel betaPermissionExposureLevel = 64;

    // Fields 65-80 are reserved for future permission configuration parameters.
}
